--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,75 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.infinitystudios.attendancecalculator.MainActivity">
+    android:background="#ffffff"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/etAttendance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Attendance % "
+        android:textColorHint="#9a9a9a"
+        android:textAlignment="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/border"
+        android:padding="10dp"
+        android:inputType="numberDecimal"
+        android:textColor="#000000"/>
+
+    <EditText
+        android:id="@+id/etHoursTaken"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="No. of hours taken"
+        android:textColorHint="#9a9a9a"
+        android:textAlignment="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/border"
+        android:padding="10dp"
+        android:inputType="number"
+        android:textColor="#000000"/>
+
+    <EditText
+        android:id="@+id/etHoursBunk"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="No. of hours planning to bunk"
+        android:textColorHint="#9a9a9a"
+        android:textAlignment="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/border"
+        android:padding="10dp"
+        android:inputType="number"
+        android:textColor="#000000"/>
+
+    <Button
+        android:id="@+id/btnCalculate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="CALCULATE"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tvResult"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:padding="20dp"
+        android:textSize="20dp"
+        />
+
+
+</LinearLayout>
